# youtube_test

./: README.md  pyproject.toml
.github/workflows/: daily-book-base.yml  daily.yml
output/2026-06-19_否定しない言い換え事典/: 00_input.txt  failed_images.md  image_prompts.md  legacy_description.md  legacy_thumbnail_ideas.md  legacy_titles.md  metadata.md  quality_report.md  script.md
output/2026-06-19_否定しない言い換え事典/debug/: raw_ai_response.txt
output/2026-06-20_否定しない言い換え事典/: 05_image_prompts.json  failed_images.md  image_context.json  image_progress.json  image_prompts.md  legacy_description.md  legacy_thumbnail_ideas.md  legacy_titles.md  metadata.md  quality_report.md  script.md
rules/: image_block_rules.md  image_rules.md  image_rules_common.md  input_asset_rules.md  metadata_rules.md  quality_checklist.md  script_rules.md  thumbnail_rules.md  title_rules.md
rules/image_scene_rules/: scene_01.md  scene_02.md  scene_03.md  scene_04.md  scene_05.md  scene_06.md  scene_07.md  scene_08.md  scene_09.md  scene_10.md  scene_11.md  scene_12.md  scene_13.md  scene_14.md  scene_15.md  scene_16.md  scene_17.md  scene_18.md  scene_19.md  scene_20.md
src/bookbase_automation/: __init__.py  assets.py  cli.py  config.py  fs_utils.py  generator.py  image_generation.py  input_assets.py  metadata.py  openai_retry.py  processor.py  quality.py  rules.py
tests/: test_ai_json_response.py  test_assets.py  test_fs_utils.py  test_image_generation_api.py  test_image_prompts.py  test_metadata.py  test_processor.py  test_quality.py  test_thumbnails.py
(+5 files in other folders)
