[project]
name = "bookbase-automation"
version = "0.1.0"
description = "Book Base YouTube production helper automation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
bookbase-automation = "bookbase_automation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
